--- a/index.html
+++ b/index.html
@@ -56,79 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/xblue-comprar-com-garantia/">Compra Segura | XBLUE</a>
+        <a href="/xblue-compre-com-desconto/">XBlue Funciona? [Melhor Oferta]</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/liftcha-compre-com-desconto/">Comprar Lift Chá Com Desconto</a>
+        <a href="/comprar-com-garantia-lift-cha/">Pague Menos | Lift Chá</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/libidxtreme-caps-compre-agora-o-seu/">LibidXtreme Caps funciona? -【Detalhes e Preço】</a>
+        <a href="/comprar-libid-xtreme-desconto/">LIBIDXTREME funciona? - (R$ 227,00 somente hoje)</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/conheca-o-iq-agenda/">IQ Agenda com Desconto</a>
+        <a href="/iqagenda-promocao/">IQ Agenda oferece 60% De Desconto</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-instaboom-agora-com-desconto/">Instaboom funciona? | (Treinamento Online apenas R$ 97,00/Mês)</a>
+        <a href="/garantia-compre-instaboom/">Instaboom em Promoção</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/desconto-comprar-idiomafelino/">[ACESSO SEGURO] Idioma Felino</a>
+        <a href="/comprar-com-seguranca-idiomafelino/">[COMPRA SEGURA] IDIOMA FELINO</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/hot-blue-caps-o-que-e/">HotBlue Caps → (Todos os Detalhes)</a>
+        <a href="/hotbluecaps-adquira-agora-o-seu/">HotBlue Caps Funciona? -【Parcele em até 12x】</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/compre-agora-o-seu-hidraliso-alisante-de-chuveiro/">[ATENÇÃO] HIDRALISO</a>
+        <a href="/pague-menos-hidraliso-alisante-de-chuveiro/">HIDRALISO - ALISANTE DE CHUVEIRO oferece 76% De Desconto</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/guiadoscore-site-blindado/">Promoção GUIA DO SCORE [SÓ HOJE]</a>
+        <a href="/completo-e-aprovado-score-em-7dias/">Comprar Guia do Score 7 Dias agora</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/growtizze-e-bom-acessar-a-pagina/">[ACESSO IMEDIATO] Growtizze</a>
+        <a href="/growtizze-promocao-imperdivel/">GROWTIZZE funciona? - PREÇO PROMOCIONAL | Divide em 8x</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/veja-futebol-trade-com-lucas-tylty/">[ACESSE] FUTEBOL TRADE</a>
+        <a href="/futeboltrade-promocao-so-hoje/">Futebol Trade funciona? → (Parcele em até 12x)</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/desconto-fornecedores-restritos/">Fornecedores Restritos com Menor Preço</a>
+        <a href="/desconto-comprar-fornecedores-restritos/">Compra Segura | Fornecedores Restritos</a>
       </h2>
-      <p>26/08/2021</p>
+      <p>27/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/formuladigitadoronline-em-promocao/">FÓRMULA DIGITADOR ONLINE em Promoção</a>
+        <a href="/comprar-formula-digitadoronline-agora/">FÓRMULA DIGITADOR ONLINE [Compre 47% OFF]</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-formuladespertemilionario-compre/">FÓRMULA DESPERTE MILIONÁRIO | [por apenas R$ 297,00 COM DESCONTO]</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/atencao-folixil/">FOLIXIL funciona? 【Produto ORIGINAL | Fórmula Natural】</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/fit-lucrativo-menor-preco/">Compre com Desconto | Fit Lucrativo</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-fertilcaps/">PRODUTO ORIGINAL - FERTIL CAPS</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-duratrina/">DESCONTO - Duratrina</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/digitadordemarketingonline2-0-disponivel-com-desconto/">[VEJA!] DIGITADOR DE MARKETING ONLINE 2.0</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-detox3d-so-hoje/">[ATENÇÃO!] DETOX 3D</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/veja-curso-destino-rico/">Destino Rico funciona? → [Inscrição Oficial]</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-clean-caps/">[ACESSE!] Clean Caps</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/centralizze-compre-com-garantia/">[ACESSO SEGURO] Centralizze</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/central-bots-promocao-imperdivel/">Compre com Desconto → Central Bots</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-canvapara-negocios-somente-hoje/">DESCONTO → CANVA PARA NEGÓCIOS</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/bi-zen-com-menor-preco/">Bi-zen Funciona? | Produto Aprovado pela Anvisa | Fórmula 100% Natural</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/air-sleep-disponivel-desconto/">Compre com Desconto - Air Sleep</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/agenciagram-e-bom-conheca-o-novo-metodo-inedito-por-apenas-r-29-00-por-mes/">[VEJA!] AGÊNCIAGRAM</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/academia-de-milionarios-vale-a-pena-compra-segura/">DESCONTO | ACADEMIA DE MILIONÁRIOS</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/360-slim-em-promocao/">Site Blindado - 360Slim</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/atencao-macrame-passo-a-passo/">Promoção MACRAMÊ PASSO A PASSO [IMPERDÍVEL]</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/magnifique-paris-e-bom/">O que é Magnifique Paris e onde comprar?</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/x-potent-e-confiavel/">Comprar com Segurança - XPotent</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xanimal-em-promocao/">[ATENÇÃO!] XAnimal</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/curso-turbobinary-comprar-com-garantia/">Curso Turbo Binary Com 50% De Desconto</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/topfornecedores-ocultos-comprar-com-garantia/">Pague Menos | TOP FORNECEDORES OCULTOS</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-thor-hammer-gel/">Site Blindado → Thor's Hammer Gel</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/nova-formula-natural-supertesaodevaca/">Compra Segura - SUPER TESÃO DE VACA</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-comprar-sinedrol/">Comprar SINEDROL AGORA</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-silk-skin/">SILK SKIN - CREME PARA ESTRIAS funciona? | (PROMOÇÃO de R$ 179,00 por R$ 149,90)</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-subutramin-com-desconto/">[CUIDADO!] Subutramin</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-comprar-segredos-do-homeoffice/">Segredos do Home Office → (DESCONTO + Bônus)</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-segredo=daloto/">SEGREDO DA LOTO Com Menor Preço</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-scoremanual-nao-perca/">Compre com Garantia | SCORE MANUAL</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-robot-million-2-0-desconto/">ROBOT MILLION 2.0 Funciona? - (Aprenda o Método apenas R$ 147,00 por Mês)</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robo-pipoco-do-trovao-disponivel-desconto/">Robô Pipoco do Trovão Até 85% OFF | DESCONTO</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-robomilionario/">CURSO ROBÔ MILIONÁRIO funciona? |【Inscreva-se】</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/produto-original-mam-caps/">Mam Caps funciona? 【Parcelamento em até 12x no cartão】</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-mapas-mentais-carreiras-policiais/">Comprar com Garantia - MAPAS MENTAIS - CARREIRAS POLICIAIS</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-mb-guitar-academy-imperdivel/">MB GUITAR ACADEMY ESSENCIAL → R$ 497,00 - Pagamento Único</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/pague-menos-melannun-age/">Melannun Age Funciona? →【Produto 100% Natural】</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-metodo-monster-com-desconto/">Método Monster com 67% de desconto</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodotradermilionario-disponivel-com-desconto/">Pague Menos - MÉTODO TRADER MILIONÁRIO</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/net-milionario-promocao-aproveite/">NET MILIONÁRIO Funciona? [Bônus 100% Grátis]</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-powercaps-turbo-aproveite/">Site Blindado - Power Caps Turbo</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-garantia-profissao-home-office/">Profissão Home Office Com 10% De Desconto</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/remunera365-20-e-confiavel-5-bonus-apenas-hoje/">Promoção REMUNERA 365 2.0 [IMPERDÍVEL]</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robo-afiliado-funciona-matricule-se-hoje/">Robô Afiliado disponível (25% De Desconto)</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-robo-daloto/">Robô da Loto disponível com 10% de Desconto</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/roboinvestidortrader-com-desconto/">Pague Menos → Robô Investidor Trader</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/folixil-site-blindado/">Comprar com Segurança → FOLIXIL</a>
       </h2>
       <p>26/08/2021</p>
     </li>
@@ -140,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/folixil-site-blindado/">Comprar com Segurança → FOLIXIL</a>
+        <a href="/formuladigitadoronline-em-promocao/">FÓRMULA DIGITADOR ONLINE em Promoção</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-fornecedores-restritos/">Fornecedores Restritos com Menor Preço</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/veja-futebol-trade-com-lucas-tylty/">[ACESSE] FUTEBOL TRADE</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/growtizze-e-bom-acessar-a-pagina/">[ACESSO IMEDIATO] Growtizze</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/guiadoscore-site-blindado/">Promoção GUIA DO SCORE [SÓ HOJE]</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-agora-o-seu-hidraliso-alisante-de-chuveiro/">[ATENÇÃO] HIDRALISO</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/hot-blue-caps-o-que-e/">HotBlue Caps → (Todos os Detalhes)</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-comprar-idiomafelino/">[ACESSO SEGURO] Idioma Felino</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-instaboom-agora-com-desconto/">Instaboom funciona? | (Treinamento Online apenas R$ 97,00/Mês)</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-iq-agenda/">IQ Agenda com Desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/libidxtreme-caps-compre-agora-o-seu/">LibidXtreme Caps funciona? -【Detalhes e Preço】</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/liftcha-compre-com-desconto/">Comprar Lift Chá Com Desconto</a>
       </h2>
       <p>26/08/2021</p>
     </li>
@@ -243,6 +597,12 @@
     <li>
       <h2>
         <a href="/magnifique-paris-promocao-aproveite/">MAGNIFIQUE PARIS |【PRODUTO ORIGINAL | Nova Fórmula Natural】</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xblue-comprar-com-garantia/">Compra Segura | XBLUE</a>
       </h2>
       <p>26/08/2021</p>
     </li>
