--- a/index.html
+++ b/index.html
@@ -56,79 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/xblue-disponivel-com-desconto/">XBlue disponível (50% de desconto)</a>
+        <a href="/xblue-o-que-e-onde-comprar/">Comprar XBlue agora!</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/magnifique-paris-e-bom/">O que é Magnifique Paris e onde comprar?</a>
+        <a href="/liftcha-vale-a-pena/">Lift Chá funciona? - [Por apenas R$ 137,00 em 12x no cartão]</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/produto-original-mam-caps/">Mam Caps funciona? 【Parcelamento em até 12x no cartão】</a>
+        <a href="/comprar-libidxtreme-agora/">LIBIDXTREME Funciona? - [Conheça Aqui]</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/site-blindado-mapas-mentais-carreiras-policiais/">Comprar com Garantia - MAPAS MENTAIS - CARREIRAS POLICIAIS</a>
+        <a href="/iq-agenda-funciona/">Promoção IQ AGENDA [APROVEITE]</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-mb-guitar-academy-imperdivel/">MB GUITAR ACADEMY ESSENCIAL → R$ 497,00 - Pagamento Único</a>
+        <a href="/como-funciona-o-instaboom/">Compre com Desconto - InstaBoom</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/pague-menos-melannun-age/">Melannun Age Funciona? →【Produto 100% Natural】</a>
+        <a href="/idioma-felino-funciona-dicas-e-detalhes/">Site Blindado - IDIOMA FELINO</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-metodo-monster-com-desconto/">Método Monster com 67% de desconto</a>
+        <a href="/hot-blue-caps-desconto/">Pague Menos - HotBlue Caps</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/metodotradermilionario-disponivel-com-desconto/">Pague Menos - MÉTODO TRADER MILIONÁRIO</a>
+        <a href="/hidraliso-e-bom/">Hidraliso Em Promoção</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/net-milionario-promocao-aproveite/">NET MILIONÁRIO Funciona? [Bônus 100% Grátis]</a>
+        <a href="/veja-guiadoscore-7dias/">GUIA DO SCORE disponível (50% de Desconto)</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-powercaps-turbo-aproveite/">Site Blindado - Power Caps Turbo</a>
+        <a href="/desconto-compre-growtizze/">Comprar GROWTIZZE agora!</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/compre-com-garantia-profissao-home-office/">Profissão Home Office Com 10% De Desconto</a>
+        <a href="/comprar-com-garantia-futebol-trade/">FUTEBOL TRADE - COM LUCAS TYLTY Até 75% OFF - Desconto</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/remunera365-20-e-confiavel-5-bonus-apenas-hoje/">Promoção REMUNERA 365 2.0 [IMPERDÍVEL]</a>
+        <a href="/compra-segura-fornecedoresrestritos/">FORNECEDORES RESTRITOS Até 75% OFF → Desconto</a>
       </h2>
-      <p>27/08/2021</p>
+      <p>28/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/robo-afiliado-funciona-matricule-se-hoje/">Robô Afiliado disponível (25% De Desconto)</a>
+        <a href="/promocao-formuladigitador-online-so-hoje/">Comprar Fórmula Digitador Online Com Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/formuladespertemilionario-vale-a-pena-4-bonus-100-gratis-apenas-hoje/">Fórmula Desperte Milionário em Promoção</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/folixil-para-que-serve/">Folixil disponível (67% de desconto)</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/fit-lucrativo-pague-menos/">Fit Lucrativo funciona? → (Dicas que Funcionam)</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/onde-comprar-para-que-serve-fertil-caps/">Fertil Caps funciona? 【Compre Agora | Fórmula Exclusiva】</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-o-seu-duratrina/">Duratrina com 61% de desconto! Compre agora!</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/digitador-de-marketing-online-oferece-desconto/">[PROMOÇÃO] | Digitador de Marketing Online 2.0</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-detox3d/">Detox 3D Com Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/curso-destinorico-menor-preco/">Destino Rico disponível com 66% De Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/clean-caps-promocao-so-hoje/">CLEAN CAPS Funciona? | (Por R$ 197,00 com desconto)</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/centralizze-desconto/">Centralizze com 10% De Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-central-bots-nao-perca/">CENTRAL BOTS | [Online apenas R$ 69,00/Mês]</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/canva-para-negocios-funciona/">[ATENÇÃO!] CANVA PARA NEGÓCIOS</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/bizen-o-que-e/">BI-ZEN funciona? → (SAIBA MAIS AQUI)</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/air-sleep-funciona-melhor-preco-2021/">Comprar com Garantia → Air Sleep</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/pague-menos-agenciagram/">Compre com Desconto → AGÊNCIAGRAM</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-academia-de-milionarios-compre/">Pague Menos → ACADEMIA DE MILIONÁRIOS</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/composicao-100-natural-360-slim/">Compra Segura - 360Slim</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/pague-menos-macrame-passoapasso/">Macramê Passo a Passo Com 80% De Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/magnifiqueparis-funciona/">MAGNIFIQUE PARIS - [Parcelamento em até 12x]</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/o-que-e-x-potent/">Conheça o X POTENT</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xanimal-e-bom-acesso-seguro/">[VEJA] X Animal</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cursoturbobinary-com-menor-preco/">Curso Turbo Binary disponível (50% De Desconto)</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-topfornecedores-ocultos/">TOP FORNECEDORES OCULTOS com 58% de Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/thors-hammer-gel-e-confiavel-nao-perca-o-desconto/">Comprar com Garantia - Thors Hammer Gel</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/super-tesao-devaca-disponivel-desconto/">[ATENÇÃO!] Super Tesão de Vaca</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-sinedrol/">Promoção SINEDROL [SÓ HOJE]</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-silk-skin/">[VEJA] Silk Skin - Creme para Estrias</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/subutramin-e-bom/">Subutramin Com 67% de Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredos-do-homeoffice-vale-a-pena/">[ACESSE!] Segredos do Home Office</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredodaloto-em-promocao/">SEGREDO DA LOTO funciona? -【Curso à Distância】</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-scoremanual-aproveite/">Score Manual | (Compre com Garantia)</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-robot-million-imperdivel/">Comprar Robot Million 2.0 agora</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robopipocodotrovao-comprar-com-garantia/">ROBÔ PIPOCO DO TROVÃO com 85% de Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-robo-milionario/">Robô Milionário disponível com 10% De Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-seguranca-mamcaps/">[ATENÇÃO!] Mam Caps</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mapas-mentais-carreiraspoliciais-oferece-desconto/">Pague Menos - Mapas Mentais Carreiras Policiais</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-mb-guitaracademy/">DESCONTO → MB Guitar Academy</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-melannunage-desconto/">Conheça o Melannun Age</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodomonster-acesso-imediato/">MÉTODO MONSTER → Guia Prático</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-metodotradermilionario/">Método Trader Milionário disponível (90% de desconto)</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-netmilionario/">Net Milionário funciona? |【Quero Fazer Minha Inscrição】</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/powercapsturbo-disponivel-desconto/">POWERCAPS TURBO disponível (53% de desconto)</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-profissao-homeoffice-agora/">Comprar com Segurança - PROFISSÃO HOME OFFICE</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-imediato-remunera-365-2-0/">Compra Segura → Remunera 365 2.0</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robo-afiliado-so-hoje-promocao/">ROBÔ AFILIADO Com 25% de Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robodaloto-desconto/">Compre com Garantia | ROBÔ DA LOTO</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/roboinvestidortrader-com-menor-preco/">Robô Investidor Trader disponível com 70% De Desconto</a>
+      </h2>
+      <p>28/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/roboinvestidortrader-com-desconto/">Pague Menos → Robô Investidor Trader</a>
       </h2>
       <p>27/08/2021</p>
     </li>
@@ -140,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/roboinvestidortrader-com-desconto/">Pague Menos → Robô Investidor Trader</a>
+        <a href="/robo-afiliado-funciona-matricule-se-hoje/">Robô Afiliado disponível (25% De Desconto)</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/remunera365-20-e-confiavel-5-bonus-apenas-hoje/">Promoção REMUNERA 365 2.0 [IMPERDÍVEL]</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-garantia-profissao-home-office/">Profissão Home Office Com 10% De Desconto</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-powercaps-turbo-aproveite/">Site Blindado - Power Caps Turbo</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/net-milionario-promocao-aproveite/">NET MILIONÁRIO Funciona? [Bônus 100% Grátis]</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodotradermilionario-disponivel-com-desconto/">Pague Menos - MÉTODO TRADER MILIONÁRIO</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-metodo-monster-com-desconto/">Método Monster com 67% de desconto</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/pague-menos-melannun-age/">Melannun Age Funciona? →【Produto 100% Natural】</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-mb-guitar-academy-imperdivel/">MB GUITAR ACADEMY ESSENCIAL → R$ 497,00 - Pagamento Único</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-mapas-mentais-carreiras-policiais/">Comprar com Garantia - MAPAS MENTAIS - CARREIRAS POLICIAIS</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/produto-original-mam-caps/">Mam Caps funciona? 【Parcelamento em até 12x no cartão】</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/magnifique-paris-e-bom/">O que é Magnifique Paris e onde comprar?</a>
       </h2>
       <p>27/08/2021</p>
     </li>
@@ -591,6 +945,12 @@
     <li>
       <h2>
         <a href="/xpotent-acesso-imediato/">Site Blindado - X Potent</a>
+      </h2>
+      <p>27/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xblue-disponivel-com-desconto/">XBlue disponível (50% de desconto)</a>
       </h2>
       <p>27/08/2021</p>
     </li>
